<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr"
    tools:context="com.HeartmatePack.heartmate.PatientSignUp2Activity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">
        <!-- Date of Birth Label -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/text_BirthDate"
                    android:layout_width="255dp"
                    android:layout_height="match_parent"
                    android:clickable="true"
                    android:hint="Birthday"
                    android:textSize="18sp"
                    android:editable="false"/>

            </TableRow>

            <ImageView
                android:id="@+id/icon_date"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:clickable="true"
                android:scaleType="fitXY"
                android:src="@drawable/ic_date_range" />
        </RelativeLayout>
    <!-- Weight -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="8dp">

        <TableRow
            android:layout_width="0dp"
            android:layout_weight="6"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_weght"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="Wieght"
                android:inputType="number" />
        </TableRow>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_weight="2"
            android:freezesText="true"
            android:text="Kg"
            android:textAlignment="center"
            android:gravity="center"
            android:textSize="20sp"/>
        <!-- end of wieght Layout -->
    </LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="8dp"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Heart Rate:"
        android:textStyle="bold"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="2"
        >
        <EditText
            android:id="@+id/minrate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="Min. Rate"
            android:inputType="number"
            />
        <EditText
            android:id="@+id/maxrate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="Max. Rate"
            android:inputType="number"
            />

    </LinearLayout>

</LinearLayout>

    <!--End of Date of Birth label-->

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="8dp"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="first aid Selection:"
        android:textStyle="bold"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="2dp"
        >
        <CheckBox
            android:id="@+id/aid1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aid1"
            />
        <CheckBox
            android:id="@+id/aid2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aid2"
            />
        <CheckBox
            android:id="@+id/aid3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aid3"
            />
        <CheckBox
            android:id="@+id/aid4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aid4"
            />
        <CheckBox
            android:id="@+id/aid5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aid5"
            />

    </LinearLayout>
</LinearLayout>
    <!--Gender Label-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="Gender: "
            android:textSize="18sp"/>

        <!-- Gender Radio Group -->
        <RadioGroup
            android:id="@+id/radio"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Gender"
            android:orientation="horizontal"

            android:layout_alignParentRight="true">
            <RadioButton android:id="@+id/radio_pirates"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Male"/>
            <RadioButton android:id="@+id/radio_ninjas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Female"/>

            <!-- end of Gender Radio Group -->
        </RadioGroup>
    </LinearLayout>

    <!--Empty label textView-->
    <TextView
        android:id="@+id/text_empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:textColor="@color/colorError"/>


    <!-- Signup Button -->
    <Button
        android:id="@+id/btn_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="16dp"
        android:layout_gravity="center"
        android:padding="8dp"
        android:layout_marginVertical="70dp"
        android:text="Submit"
        android:background="@color/colorButtons"
        android:textColor="@color/colorTextButton"/>
    </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
