<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr"
    tools:context="com.HeartmatePack.heartmate.EditActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="24dp"
            android:orientation="vertical"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:paddingTop="60dp">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="97dp"
                android:layout_height="105dp"
                android:src="@drawable/ic_account_circle"
                tools:layout_editor_absoluteX="271dp"
                tools:layout_editor_absoluteY="6dp" />
            <!--  Name Label -->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:layout_weight="4">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="First name" />

                <EditText
                    android:id="@+id/input_f_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:layout_weight="4">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Last name" />

                <EditText
                    android:id="@+id/input_l_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3" />

            </TableRow>
            <!-- Date of Birth Label -->


            <!-- Phone number Label -->
            <TableRow
                android:id="@+id/wight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:layout_weight="4">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="wight" />

                <EditText
                    android:id="@+id/input_wight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:inputType="number"/>
            </TableRow>


            <!-- Wristband serial number Label -->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:layout_weight="4">

                <TextView
                    android:id="@+id/phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Phone" />

                <EditText
                    android:id="@+id/input_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:inputType="number"/>
            </TableRow>


            <!-- Password Label -->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:layout_weight="4">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="E-mail" />

                <EditText
                    android:id="@+id/input_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"

                    />
            </TableRow>

            <TableRow
                android:id="@+id/speial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:layout_weight="4">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Specialty" />

                <EditText
                    android:id="@+id/input_p_specialty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3" />
            </TableRow>

            <TableRow
                android:id="@+id/hospital"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:layout_weight="4">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Hospital" />

                <EditText
                    android:id="@+id/input_p_hospital"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3" />
            </TableRow>
            <LinearLayout
                android:id="@+id/heart_rate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="8dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Heart Rate:"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_weight="2"
                    >
                    <EditText
                        android:id="@+id/minrate"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="Min. Rate"
                        android:inputType="number"
                        />
                    <EditText
                        android:id="@+id/maxrate"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="Max. Rate"
                        android:inputType="number"
                        />

                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:id="@+id/aids"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="8dp"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="first aid Selection:"
                    android:textStyle="bold"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="2dp"
                    >
                    <CheckBox
                        android:id="@+id/aid1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/aid1"
                        />
                    <CheckBox
                        android:id="@+id/aid2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/aid2"
                        />
                    <CheckBox
                        android:id="@+id/aid3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/aid3"
                        />
                    <CheckBox
                        android:id="@+id/aid4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/aid4"
                        />
                    <CheckBox
                        android:id="@+id/aid5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/aid5"
                        />

                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/btn_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:layout_marginTop="16dp"
                android:background="@color/colorButtons"
                android:padding="8dp"
                android:text="Update"
                android:textColor="@color/colorTextButton" />

        </LinearLayout>


    </ScrollView>

</android.support.constraint.ConstraintLayout>
